--- a/src/app/components/volunteering-domain/volunteering-domain.component.html
+++ b/src/app/components/volunteering-domain/volunteering-domain.component.html
@@ -15,7 +15,7 @@
             <select class="form-select form-control" (change)="selectDomain($event.target.value)"
               aria-label="Default select example">
               <option selected>{{item.domain.description}}</option>
-              <option *ngFor="let item1 of item.volunteerDomain">{{item1.description}}</option>
+              <option *ngFor="let item1 of item.volunteerDomain" [value]="item1.code_volunteering">{{item1.description}}</option>
 
             </select>
         </div>
